meta-mion: Restructure of meta-mion
No need to have nested layers in meta-mion anymore. Just the single
layer now

Signed-off-by: Eilís Ní Fhlannagáin <pidge@toganlabs.com>

--- a/README
+++ b/README
@@ -14,8 +14,7 @@ openembedded-core/meta
 
 URI	git@github.com:NetworkGradeLinux/meta-mion 
 branch: dunfell
-meta-mion/meta-mion 
-meta-mion/meta-mion-simplerunc 
+meta-mion 
 
 URI	git@github.com:NetworkGradeLinux/meta-mion-bsp
 branch: dunfell
